# Wisielec-Sieci

./: .gitignore  README.md
klient/: KlientGUItry.cpp  WINDOW.cpp  klient  klient.cpp  newKlient.cpp  newKlientWithoutGUI.cpp
klient/Aplikacja/: Application.cpp  Application.h  CMakeLists.txt  Resources.cpp  Resources.h  Widok_Choice.cpp  Widok_Choice.h  Widok_Game.cpp  Widok_Game.h  Widok_Login.cpp  Widok_Login.h
serwer/: CMakeLists.txt  newSerwer.cpp  newSerwer2.cpp  newSerwerCopy.cpp  serwer  serwer.cpp  serwer2  serwer2.cpp  serwerC
